src/components/LeaderBoard/_leaderboard.scss
.leaderboard-wrapper{
  font-family: 'Poppins', sans-serif !important;
}


.leaderboardTitle {
  font-style: normal;
  font-weight: 800;
  font-size: 24px;
  line-height: 32px;
  color: #ffffff;
}

.grandPrices-wrapper {
  background-color: #242240;
  border-radius: 8px;
  padding: 10px;
  background-image: url("./assets/leaderboardBanner.png");
  background-position: center;
  background-repeat: no-repeat;
  background-size: 100% 100%;
  
}

.grand-label{
  font-weight: 600;
font-size: 21px;
line-height: 32px;
letter-spacing: -0.018em;

color: #F7F7FF;

}

.grandprizeTitle {
  font-style: normal;
  font-weight: 600;
  font-size: 24px;
  line-height: 36px;
  letter-spacing: -0.018em;
  color: #f7f7ff;
}

.prizeitem {
  display: flex;
  gap: 10px;
  align-items: center;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 21px;
  letter-spacing: -0.018em;
  color: #f7f7fc;
}

.winnersamount {
  font-weight: 700;
  font-size: 40px;
  line-height: 42px;
  letter-spacing: -0.018em;
  color: #f7f7fc;
  text-shadow: 0px 6px 4px #5E06A2;
}

.grand-prize{
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  margin: auto;
  transform: rotate(-7deg);
  height: fit-content;
}

.playerTable {
  border-radius: 8px;
  color: white;
}

.playerData {
  padding: 0 10px;
  font-weight: 500;
  font-size: 14px;
  line-height: 21px;
  letter-spacing: -0.018em;
  color: #ffffff;
}

.playerHeader {
  font-weight: 600;
  font-size: 10px;
  line-height: 15px;
  letter-spacing: -0.018em;
  color: #f7f7ff;
  position: sticky;
  top: 0;
  background: #080b2a;
  z-index: 2;
}

.optionText {
  font-style: normal;
  font-weight: 400;
  font-size: 12px;
  line-height: 18px;
  letter-spacing: -0.018em;
  color: #f7f7ff;
  display: flex;
  justify-content: center;
  cursor: pointer;
  // width: 80px;
}

.optionText:hover, .activeoption {
  color: #09F3D2;
}

.optionTextGolden {
  font-style: normal;
  font-weight: 500;
  font-size: 12px;
  line-height: 18px;
  letter-spacing: -0.018em;
  color: #F7F7FF;
  display: flex;
  justify-content: center;
  
}

.activeoptiongolden {
  color: #F7F7FF;
  font-size: 14px;
  }

.viewWinners {
  font-weight: 400;
font-size: 12px;
line-height: 18px;
letter-spacing: -0.018em;
color: #F7F7FF;

}

.previous-desc{
  font-weight: 400;
font-size: 10px;
line-height: 15px;
letter-spacing: -0.018em;
color: #F7F7FF;
}

.optionsWrapper {
  background: #242240;
  border-radius: 8px;
  padding: 2px;
}

.playerRow {
  position: static;
  z-index: 1;
}

.playerInnerRow {
  background: #242240;

  border-bottom: 1px solid #757086;
}

.playerInnerRow-inactive{
  background: #223B40;
}

.playerAvatar {
  width: 30px;
  height: 30px;
}
.premium-star{
  position: absolute;
  width: 12px;
  height: 12px;
  left: 0;
  
}

.playerReward {
  font-weight: 500;
  font-size: 14px;
  line-height: 21px;
  letter-spacing: -0.018em;
  color: #09f3d2;
}
.playerScore {
  font-weight: 500;
  font-size: 14px;
  line-height: 21px;
  letter-spacing: -0.018em;
  color: rgba(243, 192, 9, 1);
}

.playerName {
  font-weight: 500;
  font-size: 14px;
  line-height: 21px;
  letter-spacing: -0.018em;
  color: #f7f7ff;
}

.tablewrapper {
  height: 366px;
  overflow-y: scroll;

  @media screen and (max-width: 1600px) {
    height: 200px;
  }
}

.optiongenesis {
  background: linear-gradient(90.31deg, #F1B14B 0.27%, #DC5738 99.74%);
border-radius: 8px;
padding: 10px;
cursor: pointer;
}

.otheroptionsActive {
  background: linear-gradient(90.31deg, #7344B3 0.27%, #20BBCA 99.74%);;
  // font-weight: bold;
  padding: 10px;
  border-radius: 8px;
  
  }


.nft-hover{
  position: absolute;
  left: -50%;
  top: 7.5%;
  width: 45%;
  @media screen and (max-width: 786px) {
    width: 100%;
    position: static;
  }
}

.statusText {
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 21px;
  text-align: center;
  letter-spacing: -0.018em;
  color: #FE7A00;
}


.opensea-badge{
  transition: all .25s ease-in-out;
}

.opensea-badge:hover{
  transform: scale(1.1);
}

.tooltip-wrapper {
  background: #3b217b;
  box-shadow: 0px 6px 9px rgba(0, 0, 0, 0.16);
  border-radius: 6px;
  position: absolute;
  top: 100%;
  z-index: 4;
  visibility: hidden;
  opacity: 0;
  transition: all .25s;
}

.tooltip-active{
  opacity: 1;
  visibility: visible;
}

.tooltip-content {
  font-weight: 400;
  font-size: 10px;
  line-height: 16px;
  color: #ffffff;
  font-family: 'Poppins';
}


.nft-hover-wrapper{
  background: linear-gradient(180deg, #582378 0%, #272343 100%);
border-radius: 8px;
padding: 0px 12px 0px 12px;
width: 100%;



}

.nft-hover-title{
  font-weight: 300;
font-size: 12px;
line-height: 18px;
letter-spacing: -0.018em;
color: #F7F7FF;
}


.nft-hover-desc{
  font-weight: 500;
  font-size: 14px;
  line-height: 21px;
  text-align: center;
  color: #FFFFFF;
}


.comingsoon {
  filter: blur(3px);
  
}
.watermark {
  color: #fff;
  font-size: 26px;
  font-style: normal;
  font-weight: 800;
  line-height: 30px;
  opacity: 0.5;
  transform: rotate(-28deg);
  position: absolute;
  top: 45%;
  left: 0;
  right: 0;
  margin-left: auto;
  margin-right: auto;
  width: 353px;

  // @media only screen and (max-width: 767px) {
  //   left: 28%;
  // }

  @media only screen and (max-width: 500px) {
      width: 253px;
      font-size: 20px;

  }
  }

